--- a/TankWar.html
+++ b/TankWar.html
@@ -110,6 +110,7 @@
     var bullets = [];
     var bulletsInterval = 0;
     var tanks = [];
+    var tanksChangeDirectionInterval = 0;
     var tanksInterval = 0;
     var enemyTankOnSight = 10;
     var bulletColor = "grey";
@@ -129,21 +130,23 @@
     }
 
     function clearAllInterval(){
-        clearInterval(myTank.autoMove);
+//        clearInterval(myTank.autoMove);
         clearInterval(bulletsInterval);
         clearInterval(tanksInterval);
+        clearInterval(tanksChangeDirectionInterval);
         for(var i=0; i<tanks.length; i++){
             clearInterval(tanks[i].autoMove);
         }
     }
 
     function setAllInterval(){
-        for(var i=0; i<tanks.length; i++){
-            tanks[i].autoMove = setInterval("tanks[tanks.length-1].tMove()", 50);
-        }
-        myTank.autoMove = setInterval("myTank.tMove()", 50);
+//        for(var i=0; i<tanks.length; i++){
+//            tanks[i].autoMove = setInterval("tanks[tanks.length-1].tMove()", 50);
+//        }
+//        myTank.autoMove = setInterval("myTank.tMove()", 50);
+        tanksInterval = setInterval("moveAllTanks()", 50);
         bulletsInterval = setInterval("moveAllBullets()", 10);
-        tanksInterval = setInterval("changeTanksDirection()", 2000);
+        tanksChangeDirectionInterval = setInterval("changeTanksDirection()", 2000);
     }
 
     function changeTanksDirection(){
@@ -168,15 +171,20 @@
         if(tanks.length >= enemyTankOnSight){
             return;
         }else{
-            var tank = new Tank(2, height - 1, D, enemyColor);
+            var tank = new Tank(2, height - 1, D, enemyColor, tanks.length + 1);
             tanks.push(tank);
         }
     }
 
     function moveAllBullets(){
-        var len = bullets.length;
-        for(var i=0; i<len; i++){
+        for(var i=0; i<bullets.length; i++){
             bullets[i].bMove();
+        }
+    }
+
+    function moveAllTanks(){
+        for(var i=0; i<tanks.length; i++){
+            tanks[i].tMove();
         }
     }
 
@@ -186,7 +194,7 @@
         }
     }
 
-    function Tank(x, y, direction, background) {
+    function Tank(x, y, direction, background, NO) {
         if (isParameterValid(x, y, direction)) {
             console.log("illegal parameter");
             return;
@@ -196,6 +204,7 @@
         this.direction = direction;
         this.autoMove = 0;
         this.background = background;
+        this.NO = NO;
         this.bodys = new Array(10);
         this.bodys[1] = document.querySelector('[x="' + (x - 1).toString() + '"][y="' + (y + 1).toString() + '"]');
         this.bodys[2] = document.querySelector('[x="' + x.toString() + '"][y="' + (y + 1).toString() + '"]');
@@ -213,12 +222,14 @@
         }
         for (var i = 0; i < 10; i++) {
             this.bodys[i].style.background = this.background;
+            this.bodys[i].setAttribute("tankId", this.NO);
         }
 
         this.tMove = function () {
             for (var j = 0; j < 10; j++) {
                 var oldX = parseInt(this.bodys[j].getAttribute("x"));
                 var oldY = parseInt(this.bodys[j].getAttribute("y"));
+                this.bodys[j].removeAttribute("tankId");
                 if (this.direction == U) {
                     if (oldY == height) break;
                     if (j == 7 || j == 8 || j == 9) this.bodys[j].style.background = "";
@@ -236,6 +247,7 @@
                     if (j == 1 || j == 4 || j == 7) this.bodys[j].style.background = "";
                     this.bodys[j] = document.querySelector('[x="' + (oldX + 1).toString() + '"][y="' + (oldY).toString() + '"]');
                 }
+                this.bodys[j].setAttribute("tankId", this.NO);
                 this.bodys[j].style.background = this.background;
             }
         };
@@ -277,6 +289,23 @@
         }
     }
 
+    function turnOffBullet(bullet){
+        bullet.body.style.background = "";
+        bullet.body.removeAttribute("isBullet");
+        clearInterval(bullet.autoMove);
+        bullets.splice(bullets.indexOf(bullet),1);
+    }
+
+    function turnOffTank(tank){
+        tanks.splice(tanks.indexOf(tank),1);
+        clearInterval(tank.autoMove);
+        for(var i = 0; i < 10; i++){
+            tank.bodys[i].style.background = "";
+            tank.bodys[i].removeAttribute("tankId");
+        }
+        generateOtherTank();
+    }
+
     function Bullet(x,y,direction, bulletColor){
         this.direction = direction;
         this.autoMove = 0;
@@ -287,10 +316,21 @@
             var oldX = parseInt(this.body.getAttribute("x"));
             var oldY = parseInt(this.body.getAttribute("y"));
             if(oldX == 1 || oldX == width || oldY == 1 || oldY == height){
-                this.body.style.background = "";
-                clearInterval(this.autoMove);
-                bullets.splice(bullets.indexOf(this),1);
+                turnOffBullet(this);
                 return
+            }
+            if(this.body.hasAttribute("tankId")){
+                console.log("hit");
+                // hit a tank
+                var tankId = parseInt(this.body.getAttribute("tankId"));
+                if(tankId == -1){
+                    // hit me
+                }else{
+                    var tank = tanks[tankId-1];
+                    turnOffTank(tank);
+                    turnOffBullet(this);
+                    return;
+                }
             }
             this.body.style.background = "";
             if (this.direction == U) {
@@ -302,7 +342,6 @@
             } else if (this.direction == R) {
                 this.body = document.querySelector('[x="' + (oldX + 1).toString() + '"][y="' + (oldY).toString() + '"]');
             }
-
             this.body.style.background = bulletColor;
         }
     }
@@ -315,6 +354,7 @@
         }
         if (code >= 37 && code <= 40) {
             myTank.changeDirection(code);
+            myTank.tMove();
         }else if(code == 80 || code == 32){
             // 'P'=80, 'Space'=32
             if(stopped == 0){
@@ -331,7 +371,7 @@
     }
 
     function initTank(x, y) {
-        myTank = new Tank(x, y, U, myTankColor);
+        myTank = new Tank(x, y, U, myTankColor, -1);
     }
 
     function initMap() {
