--- a/TankWar.html
+++ b/TankWar.html
@@ -112,7 +112,7 @@
     var tanks = [];
     var tanksChangeDirectionInterval = 0;
     var tanksInterval = 0;
-    var enemyTankOnSight = 10;
+    var enemyTankOnSight = 2;
     var bulletColor = "grey";
     var myTankColor = "red";
     var enemyColor  = "black";
@@ -130,7 +130,6 @@
     }
 
     function clearAllInterval(){
-//        clearInterval(myTank.autoMove);
         clearInterval(bulletsInterval);
         clearInterval(tanksInterval);
         clearInterval(tanksChangeDirectionInterval);
@@ -140,18 +139,25 @@
     }
 
     function setAllInterval(){
-//        for(var i=0; i<tanks.length; i++){
-//            tanks[i].autoMove = setInterval("tanks[tanks.length-1].tMove()", 50);
-//        }
-//        myTank.autoMove = setInterval("myTank.tMove()", 50);
         tanksInterval = setInterval("moveAllTanks()", 50);
         bulletsInterval = setInterval("moveAllBullets()", 10);
         tanksChangeDirectionInterval = setInterval("changeTanksDirection()", 2000);
     }
 
+    function getRandomInt(min, max) {
+        return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
+
     function changeTanksDirection(){
         for(var i=0; i<tanks.length; i++){
             var t = tanks[i];
+            if(getRandomInt(0, 10) % 3 != 0){
+                t.changeDirection(getRandomInt(L, D));
+            }else{
+                t.changeDirection(getRandomInt(L, D));
+            }
+            return;
+            // turn to me so enemy is intellectual
             var tx = parseInt(t.bodys[5].getAttribute("x"));
             var ty = parseInt(t.bodys[5].getAttribute("y"));
             var mx = parseInt(myTank.bodys[5].getAttribute("x"));
@@ -165,13 +171,22 @@
                 t.changeDirection(yd > 0 ? D : U);
             }
         }
+        generateOtherTank();
     }
 
     function generateOtherTank(){
         if(tanks.length >= enemyTankOnSight){
             return;
         }else{
-            var tank = new Tank(2, height - 1, D, enemyColor, tanks.length + 1);
+            var flag = Math.floor(Math.random() * 100 % width);
+            var tank;
+            if(flag < 33){
+                tank = new Tank(2, height - 1, D, enemyColor, tanks.length + 1);
+            }else if(flag < 66){
+                tank = new Tank(Math.floor(width/2), height - 1, D, enemyColor, tanks.length + 1);
+            }else{
+                tank = new Tank(width - 1, height - 1, D, enemyColor, tanks.length + 1);
+            }
             tanks.push(tank);
         }
     }
